Landing page and Personal Details- main styles complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Yasmin Collyer CV</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface:100,200,300,400,500,600,700,|Raleway:100,200,300,400,500,600,700 &display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,23 +45,23 @@
 
                 <!--///-->
 
-                <span class=' name-border'>
-                    <h1 class='name'> Yasmin</h1>
-                    <p class='p1'>A Full Stack Web Developer</p>
-                    </span>
-
             </div>
         </div>
+        <span class=' name-border'>
+                    <h1 class='name'> Yasmin</h1>
+                    <p class='p1'>Full Stack Web Development</p>
+                    </span>
     </header>
 
     <!--About me-->
     <section class='container-fluid'>
         <div class="row row1">
             <div class="col-sm-6 about-me" id='personaldetails'>
-                <h2>Personal Details:</h2>
+                <h2 class='detail-heading'>Personal Details</h2>
+
                 <div class="personal-info">
                     <div class="key">
-                        <p class='uppercase'>
+                        <p>
                             Name:
                         </p>
                     </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="personal-info">
                     <div class="key">
-                        <p class='uppercase'>
+                        <p>
                             Address:
                         </p>
                     </div>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="personal-info">
                     <div class="key">
-                        <p class='uppercase'>
+                        <p>
                             Phone:
                         </p>
                     </div>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="personal-info">
                     <div class="key">
-                        <p class='uppercase'>
+                        <p>
                             Email:
                         </p>
                     </div>
@@ -107,6 +107,7 @@
                         </p>
                     </div>
                 </div>
+                
             </div>
 
 
@@ -115,16 +116,21 @@
 
 
                 <div class="past-items">
-                    <div class="timeline-item" data-dates='2016-17'>
+
+                    <div class="timeline-item" data-dates='2015-16'>
                         <h4>Childminder (Part-time)</h4>
                         <p>Still in school</p>
                     </div>
-                    <div class="timeline-item" data-dates='2017 - 2018'>
+                    <div class="timeline-item" data-dates='2016 - 2017'>
                         <h4>Computer Tutor</h4>
                         <p>Taught a child with intellectual disabilities, how to use a computer and type. </p>
                     </div>
+                    <div class="timeline-item" data-dates='2018-2019'>
+                        <h4>Data Entry/IT</h4>
+                        <p>Worked for A family run business.</p>
+                    </div>
                     <div class="timeline-item" data-dates='2019-Present'>
-                        <h4>Freelance IT</h4>
+                        <h4>Freelance</h4>
                         <p>Studying Fullstack Web Development</p>
                     </div>
 
@@ -174,7 +180,19 @@
                     </div>
                 </div>
 
+                <div class="personal-info">
+                    <div class="key">
+                        <p>
+                            Why hire me?
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            I am passionate about creating both, visually beautiful user experiences and highly functional code.
+                        </p>
 
+                    </div>
+                </div>
             </div>
 
 
