Added font styling, positioning and parallax scrolling

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <section class='container-fluid'>
         <div class="row ">
             <div class='col-sm-8 skills-bar' id='skills'>
-                <h2>My Skills:</h2>
+                <h2 class='skill-heading'>My Skills:</h2>
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                         HTML
@@ -180,7 +180,7 @@
                     </div>
                 </div>
 
-                <div class="personal-info">
+                <div class="personal-info hire-me">
                     <div class="key">
                         <p>
                             Why hire me?
@@ -198,14 +198,14 @@
 
 
             <div class="col-sm-4 portfolio">
-                <h3>Sample Work!</h3>
-                <a href="#" class="btn btn-info" role="button">Link Button</a>
+                <h3 class='sample-heading'>Sample Work!</h3>
+                <a href="https://www.wikipedia.org" target='_blank' class='btn btn-info' role="button">Parallax</a>
 
-                <a href="#" class="btn btn-info" role="button">Link Button</a>
+                <a href="https://www.wikipedia.org" target='_blank'class="btn btn-info " role="button">Shop</a>
 
-                <a href="#" class="btn btn-info " role="button">Link Button</a>
+                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info " role="button">Business</a>
 
-                <a href="#" class="btn btn-info" role="button">Link Button</a>
+                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info" role="button">Blog</a>
 
 
             </div>
@@ -229,7 +229,7 @@
         <div class="row">
             <div class="col-sm-8 form-section">
 
-                <h3 id='workwithme'>Work with me!</h3>
+                <h3 class='work-heading' id='workwithme'>Work with me!</h3>
                 <div class="form-group">
 
                     <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
@@ -241,14 +241,16 @@
                 <div class="form-group">
                     <textarea class="form-control" rows="5" id="projectidea" placeholder='Project Idea!'></textarea>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <div class="form-group">
+                <button type="submit" class="btn btn-default">Submit</button> 
+                </div>
                 </form>
             </div>
 
 
             <div class="col-sm-4 social-section">
 
-                <h4>Find me here!</h4>
+                <h4 class='social-heading'>Find me here!</h4>
                 <a href="#" class="fa fa-facebook" aria-hidden='true'>
                 <span class='sr-only'>Facebook</span>
             </a>
