Final parallax images added and updated background colours to match

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </section>
     <section class='container-fluid'>
         <div class="row">
-            <div class="col- img1" id='img2'>
+            <div class="col- img2" >
 
 
 
@@ -215,7 +215,7 @@
     <!--spacing-->
     <section class='container-fluid'>
         <div class="row">
-            <div class="col- img1" id='img2'>
+            <div class='col- img2' >
 
 
 
@@ -260,8 +260,8 @@
                 <a href="#" class="fa fa-pinterest" aria-hidden='true'>
                 <span class='sr-only'>Pinterest</span>
             </a>
-                <a href="#" class="fa fa-youtube" aria-hidden='true'>
-                <span class='sr-only'>Youtube</span>
+                <a href="#" class="fa fa-twitter" aria-hidden='true'>
+                <span class='sr-only'>Twitter</span>
             </a>
 
             </div>
@@ -272,7 +272,7 @@
 
     <footer class='container-fluid'>
         <div class="row">
-            <div class="col- img1" id='img2'>
+            <div class='col- img1' id='img3'>
 
 
 
