Added hover transitions to nav. Added styles to My Skills section.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="personal-info hire-me">
-                    <div class="key">
+                    <div class="key hire-key">
                         <p>
                             Why hire me?
                         </p>
@@ -199,13 +199,13 @@
 
             <div class="col-sm-4 portfolio">
                 <h3 class='sample-heading'>Sample Work!</h3>
-                <a href="https://www.wikipedia.org" target='_blank' class='btn btn-info' role="button">Parallax</a>
+                <a href="https://www.wikipedia.org" target='_blank' class='btn btn-info' role="button"><p class='p-button'>Parallax</p></a>
 
-                <a href="https://www.wikipedia.org" target='_blank'class="btn btn-info " role="button">Shop</a>
+                <a href="https://www.wikipedia.org" target='_blank'class="btn btn-info " role="button"><p class='p-button'>Forum</p></a>
 
-                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info " role="button">Business</a>
+                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info " role="button"><p class='p-button'>Shop</p></a>
 
-                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info" role="button">Blog</a>
+                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info" role="button"><P class='p-button'>Blog</p></a>
 
 
             </div>
