Styled work with me section, added hover transtions to button links, added links, changed colors

--- a/index.html
+++ b/index.html
@@ -251,16 +251,16 @@
             <div class="col-sm-4 social-section">
 
                 <h4 class='social-heading'>Find me here!</h4>
-                <a href="#" class="fa fa-facebook" aria-hidden='true'>
+                <a href="https://www.facebook.com" class="fa fa-facebook" aria-hidden='true' target='_blank'>
                 <span class='sr-only'>Facebook</span>
             </a>
-                <a href="#" class="fa fa-instagram" aria-hidden='true'>
+                <a href="https://www.instagram.com" class="fa fa-instagram" aria-hidden='true' target='_blank'>
               <span class='sr-only'>Instagram</span> 
             </a>
-                <a href="#" class="fa fa-pinterest" aria-hidden='true'>
+                <a href="https://www.pinterest.ie/yascoll/" class="fa fa-pinterest" aria-hidden='true' target='_blank'>
                 <span class='sr-only'>Pinterest</span>
             </a>
-                <a href="#" class="fa fa-twitter" aria-hidden='true'>
+                <a href="https://twitter.com" class="fa fa-twitter" aria-hidden='true' target='_blank'>
                 <span class='sr-only'>Twitter</span>
             </a>
 
