Made changes to form

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Yasmin Collyer CV</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface:100,200,300,400,500,600,700,|Raleway:100,200,300,400,500,600,700 &display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -107,7 +107,7 @@
                         </p>
                     </div>
                 </div>
-                
+
             </div>
 
 
@@ -148,7 +148,7 @@
     </section>
     <section class='container-fluid'>
         <div class="row">
-            <div class="col- img2" >
+            <div class="col- img2">
 
 
 
@@ -199,13 +199,21 @@
 
             <div class="col-sm-4 portfolio">
                 <h3 class='sample-heading'>Sample Work!</h3>
-                <a href="https://www.wikipedia.org" target='_blank' class='btn btn-info' role="button"><p class='p-button'>Parallax</p></a>
+                <a href="https://www.wikipedia.org" target='_blank' class='btn btn-info' role="button">
+                    <p class='p-button'>Parallax</p>
+                </a>
 
-                <a href="https://www.wikipedia.org" target='_blank'class="btn btn-info " role="button"><p class='p-button'>Forum</p></a>
+                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info " role="button">
+                    <p class='p-button'>Forum</p>
+                </a>
 
-                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info " role="button"><p class='p-button'>Shop</p></a>
+                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info " role="button">
+                    <p class='p-button'>Shop</p>
+                </a>
 
-                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info" role="button"><P class='p-button'>Blog</p></a>
+                <a href="https://www.wikipedia.org" target='_blank' class="btn btn-info" role="button">
+                    <P class='p-button'>Blog</p>
+                </a>
 
 
             </div>
@@ -215,7 +223,7 @@
     <!--spacing-->
     <section class='container-fluid'>
         <div class="row">
-            <div class='col- img2' >
+            <div class='col- img2'>
 
 
 
@@ -232,17 +240,16 @@
                 <h3 class='work-heading' id='workwithme'>Work with me!</h3>
                 <div class="form-group">
 
-                    <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                    <input type="text" class="form-control" id="usr" placeholder='Name' name='usr' required>
                 </div>
                 <div class="form-group">
-
-                    <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
+                    <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" rows="5" id="projectidea" placeholder='Project Idea!'></textarea>
+                    <textarea class="form-control" rows="5" id="projectidea" placeholder='Project Idea!' required></textarea>
                 </div>
                 <div class="form-group">
-                <button type="submit" class="btn btn-default">Submit</button> 
+                    <button type="submit" value='submit' class="btn btn-default">Submit</button>
                 </div>
                 </form>
             </div>
