Changed some code on landing page

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
             </div>
         </div>
-        <span class=' name-border'>
-                    <h1 class='name'> Yasmin</h1>
-                    <p class='p1'>Full Stack Web Development</p>
-                    </span>
+        <div class='name-border'>
+            <h1 class='name'> Yasmin</h1>
+            <p class='p1'>Full Stack Web Development</p>
+        </div>
     </header>
 
     <!--About me-->
@@ -139,9 +139,9 @@
 
             </div>
         </div>
-        </div>
 
-        </div>
+
+
 
 
         <!--spacing-->
@@ -251,7 +251,7 @@
                 <div class="form-group">
                     <button type="submit" value='submit' class="btn btn-default">Submit</button>
                 </div>
-                </form>
+                
             </div>
 
 
