--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
             <div class="col-sm-8 form-section">
 
                 <h3 class='work-heading' id='workwithme'>Work with me!</h3>
+                <form>
                 <div class="form-group">
 
                     <input type="text" class="form-control" id="usr" placeholder='Name' name='usr' required>
@@ -251,7 +252,7 @@
                 <div class="form-group">
                     <button type="submit" value='submit' class="btn btn-default">Submit</button>
                 </div>
-                
+                </form>
             </div>
 
 
