Small content changes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            333 204 1973
+                            000 000 0000
                         </p>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            I am passionate about creating both, visually beautiful user experiences and highly functional code.
+                            I am passionate about creating both, visually beautiful user experiences and highly functional websites.
                         </p>
 
                     </div>
