Added downloadable CV to drop down menu

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#workwithme">Work with me!</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="CV/cv.pdf" target='_blank'>Download CV</a>
+                            </li>
                         </ul>
                     </div>
 
