Added CV download button to last section

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                 <a href="https://www.pinterest.ie/yascoll/" class="fa fa-pinterest" aria-hidden='true' target='_blank'>
                 <span class='sr-only'>Pinterest</span>
             </a>
-                <a href="https://twitter.com" class="fa fa-twitter" aria-hidden='true' target='_blank'>
-                <span class='sr-only'>Twitter</span>
+                <a href="CV/cv.pdf" class="fa fa-download cv-link " aria-hidden='true' target='_blank'>
+                <span class='cv-text' >CV</span>
             </a>
 
             </div>
