--- a/index.html
+++ b/index.html
@@ -236,25 +236,26 @@
         </div>
 
     </section>
+    <!-----Contact form/Socials------>
     <section class='container-fluid'>
         <div class="row">
             <div class="col-sm-8 form-section">
 
                 <h3 class='work-heading' id='workwithme'>Work with me!</h3>
                 <form>
-                <div class="form-group">
+                    <div class="form-group">
 
-                    <input type="text" class="form-control" id="usr" placeholder='Name' name='usr' required>
-                </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" rows="5" id="projectidea" placeholder='Project Idea!' required></textarea>
-                </div>
-                <div class="form-group">
-                    <button type="submit" value='submit' class="btn btn-default">Submit</button>
-                </div>
+                        <input type="text" class="form-control" id="usr" placeholder='Name' name='usr' required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" rows="5" id="projectidea" placeholder='Project Idea!' required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" value='submit' class="btn btn-default">Submit</button>
+                    </div>
                 </form>
             </div>
 
